# LocoManiFormer

./: .gitignore  README.md  pyproject.toml
docs/: procedural-robot-generation.md  project-overview.md
src/locomaniformer/: __init__.py  cli.py
src/locomaniformer/control/: __init__.py  artifacts.py  bootstrap.py  cpg.py  mapping.py
src/locomaniformer/generation/: __init__.py  artifacts.py  config.py  metadata.py  mjcf_robot.py  preview.py  sampler.py  specs.py  validation.py
tests/: test_cli.py  test_control.py  test_generation.py
